compiler/tests/ar/errors/pure_write_param.salam
// لغة: العربية
// توقع: E013
نقي دالة کتابة قیمة(مؤشر: صحیح٦٤*, قیمة: صحیح٦٤): صحیح٦٤:
    مؤشر[0] = قیمة
    أرجع قیمة
نهاية

دالة الرئیسیة:
    اطبع 1
نهاية
